redhat/rhoai/v3.5/base/10-agenthive/open-webui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-webui
  annotations:
    argocd.argoproj.io/sync-wave: "-6"
  labels:
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/part-of: agenthive
