redhat/rhoai/v3.5/base/10-agenthive/open-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    app: open-webui
    app.kubernetes.io/part-of: agenthive
spec:
  selector:
    app: open-webui
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
