redhat/rhoai/v3.5/base/10-agenthive/open-webui/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    app: open-webui
    app.kubernetes.io/part-of: agenthive
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains
spec:
  to:
    kind: Service
    name: open-webui
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
